@@ -42,7 +42,7 @@ struct	contextStruct
 	unsigned	id;
 };
 
-enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTOPEN,CONTEXTDELETE,CONTEXTDUP,CONTEXTEXTRACT,CONTEXTDISKMOUNT,CONTEXTDISKUNMOUNT,CONTEXTDISKEJECT,MAINFILENEW,MAINFILETERMINAL,MAINFILEPREFS,MAINFILEQUIT};
+enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTBMNEW,CONTEXTOPEN,CONTEXTDELETE,CONTEXTDUP,CONTEXTEXTRACT,CONTEXTDISKMOUNT,CONTEXTDISKUNMOUNT,CONTEXTDISKEJECT,CONTEXTBMOPEN,CONTEXTBMDELETE,MAINFILENEW,MAINFILETERMINAL,MAINFILEPREFS,MAINFILEQUIT};
 
 extern	menuDataStruct	menuData[];
 extern	contextStruct	**contextMenus;
